--- a/settings.toml
+++ b/settings.toml
@@ -1,4 +1,4 @@
-[project]
+[feti]
 port = 8000
 proxy_headers = true
 nocodb_url = "https://noco.1-2-wir.org"
@@ -6,3 +6,19 @@ nocodb_org_name = "noco"
 project_name = "Test Project"
 log_level = "INFO"
 dev_mode = true
+
+table_timetable = "23_timetable"
+table_entries = "23_bewerbungen"
+table_location = "23_location"
+column_timetable_when = "when"
+column_timetable_entry = "entry"
+column_entries_artist_name = "name"
+column_entries_title = "title"
+column_entries_genre = "genre"
+column_entries_description = "description"
+column_entries_artist_cv = "cv_artist"
+column_entries_location = "location"
+column_location_name = "name"
+
+title = "Timetable – Festival für Freunde"
+description = "This is the timetable for Festival für Freunde"
